--- a/env/docker/nginx/sites/laravel.conf
+++ b/env/docker/nginx/sites/laravel.conf
@@ -21,6 +21,12 @@ server {
         #fixes timeouts
         fastcgi_read_timeout 600;
         include fastcgi_params;
+
+        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Accept, Authorization, Cache-Control, Content-Type, DNT, If-Modified-Since, Keep-Alive, Origin, User-Agent, X-Requested-With' always;
+        add_header 'Access-Control-Expose-Headers' 'Authorization, Content-Length, Content-Range' always;
     }
 
     location ~ /\.ht {
